--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -77,7 +77,7 @@ border-bottom: 1px #ccc;
 }
 
 .Logo-img {
-  margin-left: 10px;
+  margin-left: 50px;
 }
 
 
@@ -656,7 +656,61 @@ color: aliceblue;
   }
 
 
-
+  @media (max-width: 768px) {
+    .steps-outer-flex-container {
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+    }
+  
+    .steps-inner-container1 {
+      margin-top: 20px;
+      text-align: center;
+    }
+  
+    .steps-inner-container1 h1 {
+      width: auto;
+    }
+  
+    .steps-inner-container2 {
+      width: 100%;
+      grid-template-columns: 1fr; /* Stack elements in one column */
+    }
+  
+    .steps-inner-flex-container2 {
+      align-items: center;
+      text-align: center;
+      margin: 15px 0;
+    }
+  
+    .steps-inner-flex-container2 h1 {
+      transform: none;
+    }
+  }
+  
+  /* Further adjustments for very small screens */
+  @media (max-width: 480px) {
+    .steps-outer-flex-container {
+      padding: 15px;
+    }
+  
+    .steps-inner-flex-container2 {
+      margin: 10px 0;
+    }
+  
+    .steps-inner-flex-container2 h1 {
+      font-size: 1.5rem;
+    }
+  
+    .steps-inner-flex-container2 i {
+      width: 25px;
+      height: 25px;
+    }
+  
+    .steps-inner-flex-container2 p {
+      font-size: 1rem;
+    }
+  }
 
 
 
