--- a/Client/src/Components/Stylesheets/AppointmentBooking.css
+++ b/Client/src/Components/Stylesheets/AppointmentBooking.css
@@ -30,12 +30,15 @@ h3 {
   margin-bottom: 15px;
 }
 
-.appointment-booking-input {
-  width:360px;
+
+#appointment-booking_input{
+
+  width:700px;
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 4px;
 }
+
 
 /* Adjusted Button Width */
 .submit-button {
@@ -51,6 +54,7 @@ h3 {
   transition: background-color 0.3s ease;
   text-align: center;
   align-items: center;
+  margin-top: 5px;
 }
 
 .submit-button:hover {
@@ -97,6 +101,13 @@ h3 {
     padding-top: 0px;
     /* background-color: white; */
 }
+
+.react-datepicker__day--selected  {
+  border-radius: 0.3rem;
+  background-color: #007bff;
+  color: #fff;
+}
+
 
 /* Slot Buttons */
 .slot-button,
@@ -173,6 +184,11 @@ i{
     flex-direction: column;
   }
 
+
+  #appointment-booking_input {
+    width: 100%; /* Full width for better fit on smaller screens */
+    padding: 8px; /* Slightly reduce padding */
+  }
   .rightwrapper {
     margin-top: 20px;
   }
@@ -183,4 +199,14 @@ i{
     font-size: 14px;
     padding: 8px 16px;
   }
+
+  #appointment-booking_input {
+    width: 100%; /* Full width */
+    padding: 6px; /* Further reduce padding for smaller screens */
+  }
 }
+
+
+
+
+
