--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -162,14 +162,27 @@ border-bottom: 1px #ccc;
 
 .navbar-collapse.show {
   display: flex;
+  background-color: #fff; 
+  padding: 10px;
+  flex-direction: column;
 }
 
 .navbar-collapse {
   display: none;
+  
 }
 
 .hamburger {
   cursor: pointer;
+}
+.nav-elements .nav-link {
+  color: black; /* White text color */
+  padding: 10px;
+  margin-left: 20px;/* Optional padding */
+}
+
+.nav-elements .nav-link:hover {
+  color: black; /* Light gray text color on hover */
 }
 
 .user-icon {
@@ -204,14 +217,14 @@ border-bottom: 1px #ccc;
 }
 
 
-/* Collapsed Navbar */
+
 @media (max-width: 991.98px) {
   .navbar-collapse {
     position: fixed;
-    top: 56px; /* Adjust as per your Navbar height */
+    top: 56px; 
     left: 0;
     right: 0;
-    background-color: #f8f9fa; /* Background color for the collapsed menu */
+    background-color: #007bff; /* Background color for the collapsed menu */
     padding: 10px 0;
     border-top: 1px solid #dee2e6;
     transition: top 0.3s ease;
@@ -219,8 +232,18 @@ border-bottom: 1px #ccc;
     overflow-y: auto;
   }
 
+ 
+
   .navbar-collapse.show {
-    top: 66px; /* Ensure the top position matches the Navbar height */
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    background-color: #fff; 
+    padding: 10px;
+    flex-direction: column;
+    top: 80px;
+    position: absolute;
+
   }
 
   .navbar-nav {
