--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -77,7 +77,7 @@ border-bottom: 1px #ccc;
 }
 
 .Logo-img {
-  margin-left: 50px;
+  margin-left: 10px;
 }
 
 
@@ -955,12 +955,15 @@ color: aliceblue;
 .footer {
   padding: 20px;
   margin-bottom: -26px;
+  text-align: left; /* Ensure text alignment */
 }
+
 
 .footer-col-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: flex-start; /* Ensure columns start from the top */
   flex-wrap: wrap;
   margin-left: 10%;
 }
@@ -969,11 +972,12 @@ color: aliceblue;
   flex: 1;
   margin: 10px;
   min-width: 200px;
+  text-align: left; 
 }
 
 .footer-column h3 {
   margin-bottom: 10px;
-  margin-right: 70%;
+  text-align: left; 
 }
 
 .footer-column ul {
