--- a/Client/src/Components/Stylesheets/Notifications.css
+++ b/Client/src/Components/Stylesheets/Notifications.css
@@ -12,6 +12,7 @@
   color: #343a40;
   margin-bottom: 20px;
   text-align: center; /* Center the heading text */
+  background: transparent;
 }
 
 .notifications-container {
