--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -951,16 +951,18 @@ color: aliceblue;
   background-color: #f3eeee; /* Silver-like color for the entire footer */
   color: #010101; /* Text color for better contrast */
 }
-
 .footer {
   padding: 20px;
   margin-bottom: -26px;
+  text-align: left; /* Ensure text alignment */
 }
+
 
 .footer-col-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: flex-start; /* Ensure columns start from the top */
   flex-wrap: wrap;
   margin-left: 10%;
 }
@@ -969,11 +971,12 @@ color: aliceblue;
   flex: 1;
   margin: 10px;
   min-width: 200px;
+  text-align: left; 
 }
 
 .footer-column h3 {
   margin-bottom: 10px;
-  margin-right: 70%;
+  text-align: left; 
 }
 
 .footer-column ul {
