--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,13 +1,14 @@
-*{
-  background-color: rgb(255, 255, 255);
+/* *{
+ 
   
-}
+} */
 body, html {
   margin: 0;
   padding: 0;
   overflow-x: hidden; 
  
 }
+body::-webkit-scrollbar{width: 1px;}
 
 h1,
 p {
@@ -77,7 +78,7 @@ border-bottom: 1px #ccc;
 }
 
 .Logo-img {
-  margin-left: 10px;
+  margin-left: 15px;
 }
 
 
@@ -1015,7 +1016,7 @@ color: aliceblue;
 .Copyright-section {
   text-align: center;
   margin-top: 20px;
-  border-top: 2px solid rgb(105, 199, 199);
+  border-top: 2px solid #007bff;
   padding-top: 10px;
   color: inherit;
 }
@@ -1515,3 +1516,76 @@ color: aliceblue;
 
 
 /* 404 error page css ends */
+
+
+/* privacy policy  starts */
+.privacy-policy-outer-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  margin-bottom: 30px;
+}
+.privacy-policy-inner-container {
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+.privacy-policy-outer-flex-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 81%;
+  background-color: rgba(190, 190, 190, 0.232);
+  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 15px;
+}
+.privacy-policy-outer-flex-container i {
+  background: transparent;
+  color: #0096ff;
+}
+.privacy-policy-flex-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.privacy-policy-container {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+
+  width: 90%;
+  background-color: rgba(190, 190, 190, 0.232);
+  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 15px;
+}
+.privacy-policy-container i {
+  background: transparent;
+  color: #0096ff;
+  cursor: pointer;
+  font-weight: 1000;
+}
+#privacy-content {
+  margin-top: 10px;
+}
+#privacy-policy-outer-container-h1 {
+  margin-bottom: 10px;
+  text-align: center;
+}
+#privacy-policy-outer-container-p {
+  margin-bottom: 30px;
+  text-align: center;
+  align-content: center !important;
+  background-color: transparent !important;
+}
+
+/* privacy policy ends */
