--- a/Client/src/Components/Stylesheets/Contactus.css
+++ b/Client/src/Components/Stylesheets/Contactus.css
@@ -18,7 +18,7 @@
 
 .send-msg-heading,
 .contactus-heading {
-  color: #083a60;
+  color: #007bff;
   margin: 0 0 30px 0;
   text-align: center;
 }
@@ -77,7 +77,7 @@
 }
 
 .contact-info h4 {
-  color: #083a60;
+  color: #007bff;
   font-family: "Source Serif Pro", sans-serif;
   font-size: 25px;
   margin-top: 15px;
@@ -92,7 +92,7 @@
 .contact-info svg {
   margin-right: 8px;
   vertical-align: middle;
-  color: #083a60;
+  color: #007bff;
 }
 
 /* Responsive Styles */
