--- a/Client/src/Components/Stylesheets/LandingPageBlogs.css
+++ b/Client/src/Components/Stylesheets/LandingPageBlogs.css
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 100%;
+    width: 95%;
     flex-wrap: wrap;
     margin-top: 50px;
   }
@@ -74,4 +74,6 @@
     color: #007bff;
     font-size: 15px;
     margin-top: 5px;
+    text-align: center;
+    width:79%;
   }
