--- a/Client/src/Components/Stylesheets/AppointmentBooking.css
+++ b/Client/src/Components/Stylesheets/AppointmentBooking.css
@@ -48,18 +48,32 @@ h3 {
   background-color: #007bff;
   color: #fff;
   border: none;
-  border-radius: 4px;
+  
+  background-image: linear-gradient(90deg, #0056b3 50%, #007bff 50%);
+  border-radius: 50px;
   font-size: 16px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: background-position 0.5s ease; /* Animate background position */
   text-align: center;
   align-items: center;
   margin-top: 5px;
+  cursor: pointer;
+  background-size: 200%; /* Make the background image larger to allow for movement */
+  background-position: right; /* Start position of the gradient */
 }
 
+ /* Ensure consistent font size */
+
+
+
 .submit-button:hover {
-  background-color: #0056b3;
+  background-position: left; /* End position of the gradient on hover */
 }
+
+.submit-button:not(:hover) {
+  transition: background-position 0.5s ease; /* Smooth transition back to initial position */
+}
+
 
 .message {
   text-align: center;
